# ag-ui

sdks/community/rust/: Cargo.toml
sdks/community/rust/crates/ag-ui-client/: Cargo.toml
sdks/community/rust/crates/ag-ui-client/src/: agent.rs  event_handler.rs  lib.rs  subscriber.rs  verify.rs
sdks/community/rust/crates/ag-ui-client/src/middleware/: filter_tool_calls.rs  mod.rs
sdks/community/rust/crates/ag-ui-client/tests/: http_agent_test.rs  langgraph_server_test.rs  sse_test.rs
sdks/community/rust/crates/ag-ui-core/src/: capabilities.rs  error.rs  event.rs  lib.rs
sdks/community/rust/crates/ag-ui-core/src/types/: ids.rs  input.rs  input_content.rs  interrupt.rs  message.rs  mod.rs  tool.rs
sdks/community/rust/crates/ag-ui-core/tests/: unit.rs
sdks/community/rust/crates/ag-ui-server/: Cargo.toml
sdks/community/rust/crates/ag-ui-server/examples/: basic_agent.rs
sdks/community/rust/crates/ag-ui-server/src/: agent.rs  compact.rs  error.rs  finalize.rs  lib.rs  middleware.rs
sdks/community/rust/crates/ag-ui-server/src/encoder/: mod.rs  sse.rs
sdks/community/rust/crates/ag-ui-server/src/integrations/: axum.rs  mod.rs
sdks/community/rust/crates/ag-ui-server/src/state/: manager.rs  mod.rs
