[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
thiserror = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
uuid = { version = "1.17.0", features = ["v4", "v5", "serde"] }

[patch.crates-io]
ag-ui-core = { path = "crates/ag-ui-core" }
ag-ui-client = { path = "crates/ag-ui-client" }
ag-ui-server = { path = "crates/ag-ui-server" }